# acter

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: checklist.yml  ci.yml
crates/acter-app/: Cargo.toml  build.rs  tauri.conf.json
crates/acter-app/capabilities/: default.json
crates/acter-app/src/: adapters.rs  composition.rs  container.rs  echo.rs  entities.rs  lib.rs  main.rs  ports.rs  routers.rs  services.rs
crates/acter-app/src/adapters/: channel_sink.rs
crates/acter-app/src/echo/: api.rs  service.rs
crates/acter-app/src/entities/: fake_script.rs
crates/acter-app/src/ports/: echo_api.rs
crates/acter-app/src/routers/: echo.rs  session.rs
crates/acter-app/src/services/: echo.rs  fake_session.rs
crates/acter-app/tests/: protocol_bindings.rs
crates/acter-core/: Cargo.toml
crates/acter-core/src/: entities.rs  lib.rs  ports.rs
crates/acter-core/src/entities/: protocol_commands.rs  protocol_common.rs  protocol_events.rs
crates/acter-core/src/ports/: driven.rs  driving.rs
crates/acter-core/src/ports/driven/: event_sink.rs
crates/acter-core/src/ports/driving/: session_api.rs
crates/acter-shells/: Cargo.toml
crates/acter-shells/src/: lib.rs
crates/acter-term/: Cargo.toml
crates/acter-term/src/: lib.rs
crates/acter-transports/: Cargo.toml
crates/acter-transports/src/: lib.rs
docs/: A11Y-NOTES.md  ARCHITECTURE.md  DESIGN.md  ROADMAP.md
docs/specs/: a1-static-shell.md  a2-protocol.md  a3-fake-session-backend.md  a5-buffer-focus-last-heading.md  pr0-scaffold.md  t1-router-integration-tests.md  t2-e2e-webdriver.md
e2e/: package.json  tsconfig.json  wdio.conf.ts
e2e/test/: helpers.ts
e2e/test/specs/: announcer.spec.ts  axe.spec.ts  big.spec.ts  smoke.spec.ts  speech.spec.ts  tail.spec.ts
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: main.ts  protocol.ts  styles.css
ui/src/adapters/: announcer.ts  beep.ts  buffer.test.ts  buffer.ts  edit_field.ts  keyboard.ts
ui/src/controller/: app.test.ts  app.ts
ui/src/controllers/: app.test.ts  app.ts
ui/src/ipc/: router.ts
ui/src/ports/: announcer_view.ts  backend_api.ts  beep_view.ts  buffer_view.ts  edit_field_view.ts
ui/src/routers/: tauri.ts
ui/src/views/: announcer.ts  buffer.ts  edit_field.ts  keyboard.ts  main_window.html  ports.ts
ui/test/: protocol.test.ts
ui/test/adapters/: announcer.test.ts  buffer.test.ts
ui/test/controllers/: app.test.ts
ui/views/: main_window.html
