[package]
name = "acter-app"
description = "Composition root and Tauri delivery layer: routers, controllers, wiring."
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
serde_json = "1"

[lints]
workspace = true
