[package]
name = "acter-app"
description = "Composition root and Tauri delivery layer: routers, controllers, wiring."
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# The domain crate: SessionApi/EventSink ports and the IPC protocol types. A normal
# dependency since A3 (was dev-only in A2, when only the binding generator used it).
acter-core = { path = "../acter-core" }
# Fake script config parsing (entities/fake_script.rs).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embedded WebDriver server for E2E tests (spec T2). Always a dependency — Cargo
# cannot gate dependencies on debug_assertions (target cfg tables never evaluate
# it) — but registration in container.rs is #[cfg(debug_assertions)], so release
# binaries never start the automation server.
tauri-plugin-wdio-webdriver = "1"

[features]
# Standalone/production builds must serve the embedded frontend, not the Vite dev
# server. Tauri keys that on the `custom-protocol` feature: with it OFF (the default,
# so `tauri dev` keeps live-reload) the app loads `devUrl`; with it ON the app serves
# the embedded `frontendDist`. E2E and any distributable build enable it — see the
# root `test:e2e` script. Do not add it to a default feature set.
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
# Protocol-binding generator (tests/protocol_bindings.rs): renders acter-core's IPC
# types to their TypeScript mirror. acter-core and serde_json are normal dependencies
# since A3 (see [dependencies]); specta stays test-only — nothing at runtime exports types.
specta = "2.0.0-rc.25"
specta-serde = "0.0.12"
specta-typescript = "0.0.12"

[lints]
workspace = true
