[package]
name = "acter-core"
description = "Acter domain: entities, policies, ports, services, IPC protocol types. No I/O."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.25", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
